traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:9: error: Boolean does not take parameters
    else (getX()==diag && getY()==0){
                                    ^